@startuml

title __PATTERN's Class Diagram__\n

  namespace Pattern {
    class Pattern.BarChartObserver {
        - courseData : ArrayList<CourseRecord>
        + BarChartObserver()
        + paint()
        + update()
    }
  }
  

  namespace Pattern {
    class Pattern.CourseController {
        - coursePanel : JPanel
        - sliders : ArrayList<JSlider>
        + CourseController()
        + actionPerformed()
        + addCourse()
        {static} + main()
        + stateChanged()
        + update()
    }
  }
  

  namespace Pattern {
    class Pattern.CourseData {
        - courseData : ArrayList<CourseRecord>
        + CourseData()
        + addCourseRecord()
        + changeCourseRecord()
        + getUpdate()
    }
  }
  

  namespace Pattern {
    class Pattern.CourseRecord {
        - name : String
        - numOfStudents : int
        + CourseRecord()
        + getName()
        + getNumOfStudents()
        + setNumOfStudents()
        + toString()
    }
  }
  

  namespace Pattern {
    class Pattern.LayoutConstants {
        {static} + barHeight : int
        {static} + barSpacing : int
        {static} + barWidth : int
        {static} + courseColours : Color[]
        {static} + graphHeight : int
        {static} + maxValue : int
        {static} + xOffset : int
        {static} + yOffset : int
        {static} + paintBarChartOutline()
    }
  }
  

  namespace Pattern {
    abstract class Pattern.Observable {
        # observers : ArrayList<Observer>
        + Observable()
        + attach()
        + detach()
        {abstract} + getUpdate()
        + notifyObservers()
    }
  }
  

  namespace Pattern {
    interface Pattern.Observer {
        {abstract} + update()
    }
  }
  

  namespace Pattern {
    class Pattern.PieChartObserver {
        - courseData : ArrayList<CourseRecord>
        + PieChartObserver()
        + paint()
        + update()
        - checkCourseRecord()
    }
  }
  

  Pattern.BarChartObserver .up.|> Pattern.Observer
  Pattern.BarChartObserver -up-|> javax.swing.JPanel
  Pattern.CourseController .up.|> Pattern.Observer
  Pattern.CourseController .up.|> java.awt.event.ActionListener
  Pattern.CourseController .up.|> javax.swing.event.ChangeListener
  Pattern.CourseController -up-|> javax.swing.JPanel
  Pattern.CourseController o-- Pattern.CourseData : courseData
  Pattern.CourseData -up-|> Pattern.Observable
  Pattern.PieChartObserver .up.|> Pattern.Observer
  Pattern.PieChartObserver -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
